--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao ativo">Me formar</button>
+                <button class="botao">Ter um emprego melhor</button>
+                <button class="botao">Ter uma moto </button>
+                <button class="botao">Viajar para fora dos país</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
